--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.thitsarparami.thitsarparami">
    <application
-        android:label="thitsarparami"
+        android:label="Thitsarparami"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
