--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
+  flutter_bloc: ^7.3.1
+  equatable: ^2.0.3
+  shared_preferences: ^2.0.8
+
 
 dev_dependencies:
   flutter_test:
