--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^7.3.1
   equatable: ^2.0.3
   shared_preferences: ^2.0.8
+  package_info: ^2.0.2
 
 
 dev_dependencies:
