--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^7.3.1
   equatable: ^2.0.3
   shared_preferences: ^2.0.8
+  persistent_bottom_nav_bar: ^4.0.2
   package_info: ^2.0.2
 
 
