--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.8
   persistent_bottom_nav_bar: ^4.0.2
   package_info: ^2.0.2
+  audioplayers: ^0.20.1
 
 
 dev_dependencies:
