--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,12 @@ dependencies:
   shared_preferences: ^2.0.8
   persistent_bottom_nav_bar: ^4.0.2
   package_info: ^2.0.2
-  audioplayers: ^0.20.1
+  timeago: ^3.1.0
+  just_audio: ^0.9.14
+  audio_video_progress_bar: ^0.9.0
+  audio_service: ^0.18.1
+  get_it: ^7.2.0
+  youtube_player_flutter: ^8.0.0
 
 
 dev_dependencies:
