--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   audio_service: ^0.18.1
   get_it: ^7.2.0
   youtube_player_flutter: ^8.0.0
+  sliding_up_panel: ^2.0.0+1
 
 
 dev_dependencies:
