--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   audio_service: ^0.18.1
   get_it: ^7.2.0
   youtube_player_flutter: ^8.0.0
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.6
 
 
 dev_dependencies:
