--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
+  intl: ^0.17.0
   flutter_bloc: ^7.3.1
   equatable: ^2.0.3
   shared_preferences: ^2.0.8
@@ -50,6 +51,7 @@ dependencies:
   path_provider: ^2.0.6
   flowder: ^0.2.0
   percent_indicator: ^3.4.0
+  table_calendar: ^3.0.3
 
 
 dev_dependencies:
