--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flowder: ^0.2.0
   percent_indicator: ^3.4.0
   table_calendar: ^3.0.3
+  flutter_native_splash: ^1.3.1
 
 
 dev_dependencies:
@@ -107,3 +108,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_native_splash:
+  color: "#1751af"
+  image: assets/images/logo.png
