--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   percent_indicator: ^3.4.0
   table_calendar: ^3.0.3
   flutter_native_splash: ^1.3.1
-
+  flutter_js: ^0.5.0+3
 
 dev_dependencies:
   flutter_test:
@@ -80,7 +80,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/js/
      - json/
+     
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
