--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   table_calendar: ^3.0.3
   flutter_native_splash: ^1.3.1
   flutter_js: ^0.5.0+3
+  enum_to_string: ^2.0.1
+  flutter_staggered_animations: ^1.0.0
 
 dev_dependencies:
   flutter_test:
