added auto size text

--- a/json/appointment.json
+++ b/json/appointment.json
@@ -52,5 +52,23 @@
         "donar_name": "Moe Han",
         "note": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
         
+    },
+    {
+        "id": 7,
+        "type": "breakfast",
+        "start_date": "2021-11-02T13:37:27+00:00",
+        "end_date": "2021-11-02T13:37:27+00:00",
+        "donar_name": "Aung Min Hein",
+        "note": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+        
+    },
+    {
+        "id": 8,
+        "type": "lunch",
+        "start_date": "2021-11-02T13:37:27+00:00",
+        "end_date": "2021-11-02T13:37:27+00:00",
+        "donar_name": "Thi Han Lin",
+        "note": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+        
     }
 ]
