--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_js: ^0.5.0+3
   enum_to_string: ^2.0.1
   flutter_staggered_animations: ^1.0.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
