--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   enum_to_string: ^2.0.1
   flutter_staggered_animations: ^1.0.0
   auto_size_text: ^3.0.0
+  flutter_html: ^2.1.5
 
 dev_dependencies:
   flutter_test:
