--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   auto_size_text: ^3.0.0
   flutter_html: ^2.1.5
+  cached_network_image: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
