--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_html: ^2.1.5
   cached_network_image: ^3.1.0+1
+  flutter_downloader: ^1.7.1
+
 
 dev_dependencies:
   flutter_test:
