--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_html: ^2.1.5
   cached_network_image: ^3.1.0+1
   flutter_downloader: ^1.7.1
+  sliver_header_delegate: ^0.0.5
+  url_launcher: ^6.0.13
 
 
 dev_dependencies:
