--- a/android/app/bin/src/main/AndroidManifest.xml
+++ b/android/app/bin/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.thitsarparami.thitsarparami">
+    package="org.thitsarparami.app">
   
   <uses-permission android:name="android.permission.WAKE_LOCK"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> 
