--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   flutter_downloader: ^1.7.1
   sliver_header_delegate: ^0.0.5
   url_launcher: ^6.0.13
+  advance_pdf_viewer:
+        git:
+            url: https://github.com/enveraltin/pdf_viewer.git
 
 
 dev_dependencies:
